2008-11-05  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Partition_Copy.cc: Fixed copy and paste partition problem.
	  - Adjust for situation when an MSDOS partition table is in
	  	use and a primary partition is copied and pasted into
	    an unallocated space in an extended partition.
	  - Closes GParted bug #556058

2008-11-04  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Progress.cc,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc: Fixed some spelling mistakes

	* src/Win_GParted.cc: Added label update for paste to existing partition

2008-10-31  Curtis Gedak  <gedakc@gmail.com>

	* src/reiser4.cc,
	  README: Changed get_label() to use vol_id instead of debugfs.reiser4

	* src/GParted_Core.cc: Changed thread status messages to be unique

2008-10-30  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Added translator comments
	  - Removed ellipses from status messages in set_devices()

	* src/Win_GParted.cc: Added thread status message update to pulsebar

	* include/GParted_Core.h,
	  src/GParted_Core.cc: Added set and get thread status message methods
	  - Added thread status message updates in set_devices()

2008-10-28  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Remove std:: prefix from llabs()
	  - Fixes problem where gparted failed to build in debian on arm,
	    armel, mips, and mipsel (debian bug#499722)
	  - Thanks to Thiemo Seufer for small patch

	* src/reiser4.cc: Removed warning reading mounted reiser4 volume label
	  - Closes GParted bug #380546

2008-10-24  Curtis Gedak  <gedakc@gmail.com>

	* src/Utils.cc: Increased robustness of get_lang() function
	  - Assists with GParted bug #556965

2008-10-17  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Progress.cc: Converted more words for translation

2008-10-16  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Progress.cc: Added call to get_lang() for lang tags

	* include/Utils.h,
	  src/Utils.cc: Created function get_lang()

	* src/main.cc: Update copyright years
